[package]
name = "img-resize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
clap = { version = "4.4.7", features = ["derive"] }
clap_complete = "4.4.4"

[build-dependencies]
clap = { version = "4.4.7", features = ["derive"] }
clap_complete = "4.4.4"
